syntax = 'proto3'; // proto版本，参考https://developers.google.com/protocol-buffers/docs/proto3

package helloPackage; // 包名

// helloService服务定义
service helloService {
    // 方法
    rpc sayHello (HelloRequest) returns (HelloReply) {}
}

// 发送消息体
message HelloRequest {
    string name = 1;
}

// 响应消息体
message HelloReply {
    string message = 1;
}
