syntax = "proto3";
 
package testPackage;
 
service testService {
  rpc ping (pingRequest) returns (pingReply) {}
}
 
message pingRequest {
  string message = 1;
}
 
message pingReply {
  string message = 1;
}